RESOLVED FIXED145420
REGRESSION (r183820): webkit.org/blog/ background painting issue on reload, when the page contains videos
https://bugs.webkit.org/show_bug.cgi?id=145420
Summary REGRESSION (r183820): webkit.org/blog/ background painting issue on reload, w...
Simon Fraser (smfr)
Reported 2015-05-27 15:52:54 PDT
REGRESSION (r183820): webkit.org/blog/ background painting issue on reload, when the page contains videos
Attachments
Patch (12.16 KB, patch)
2015-05-27 16:01 PDT, Simon Fraser (smfr)
dino: review+
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-mavericks (537.92 KB, application/zip)
2015-05-27 16:38 PDT, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-mavericks-wk2 (584.45 KB, application/zip)
2015-05-27 16:40 PDT, Build Bot
no flags
Simon Fraser (smfr)
Comment 1 2015-05-27 16:01:49 PDT
Dean Jackson
Comment 2 2015-05-27 16:10:07 PDT
Comment on attachment 253809 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=253809&action=review > Source/WebCore/ChangeLog:8 > + After r183820, the media controls not longer had a wrapper that created CSS stacking context. Typo: not longer > Source/WebCore/rendering/RenderLayer.cpp:266 > + , m_inResizeMode(false) Annoying that you can't initialise this in the .h (unless I'm mistaken)
Build Bot
Comment 3 2015-05-27 16:38:12 PDT
Comment on attachment 253809 [details] Patch Attachment 253809 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6133612588040192 New failing tests: media/controls-layers.html
Build Bot
Comment 4 2015-05-27 16:38:15 PDT
Created attachment 253814 [details] Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 5 2015-05-27 16:40:46 PDT
Comment on attachment 253809 [details] Patch Attachment 253809 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5570662634618880 New failing tests: media/controls-layers.html
Build Bot
Comment 6 2015-05-27 16:40:49 PDT
Created attachment 253815 [details] Archive of layout-test-results from ews105 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Simon Fraser (smfr)
Comment 7 2015-05-27 17:40:22 PDT
Simon Fraser (smfr)
Comment 8 2015-05-27 17:40:52 PDT
Alexey Proskuryakov
Comment 9 2015-05-27 20:43:13 PDT
This broke media/controls-layers.html on most platforms, and made it assert on some. EWS told you so. Rollout? https://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Fcontrols-layers.html
Simon Fraser (smfr)
Comment 10 2015-05-27 21:24:31 PDT
I got mavericks-only test failures, and landed a mavericks result. We don't have Yosemite EWS so nothing told me about Yosemite failures. Nothing told me about assertions.
Simon Fraser (smfr)
Comment 11 2015-05-27 21:26:04 PDT
The assertion is existing, and one that we've papered over by skipping tests. I guess we should just skip this test for now.
Alexey Proskuryakov
Comment 12 2015-05-27 22:44:48 PDT
> nothing told me about Yosemite failures We are supposed to run tests locally, EWS is only for platforms that we don't have access to. > I guess we should just skip this test for now. We?
Alexey Proskuryakov
Comment 13 2015-05-27 22:48:16 PDT
I'm going to delete the test. No reason to pretend that this patch was covered by a meaningful regression test.
Alexey Proskuryakov
Comment 14 2015-05-27 22:53:24 PDT
Deleted in r184943.
Note You need to log in before you can comment on or make changes to this bug.