REGRESSION (r183820): webkit.org/blog/ background painting issue on reload, when the page contains videos https://bugs.webkit.org/show_bug.cgi?id=145420

Reviewed by Dean Jackson.
Source/WebCore:

After r183820, the media controls no longer had a wrapper that created CSS stacking context.
The media controls on Mac use mix-blend-mode, which causes the compositing code to look for
a stacking context ancestor and make it composited. After this change, it would walk up
to a layer outside of the media element (e.g. the document element's layer), and make
that composited. This triggered bugs with root background painting.

Prevent mix-blend-mode affecting content outside the media elements by having the media element's
layer act as a stacking context.

Test: media/controls-layers.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::RenderLayer):
* rendering/RenderLayer.h:

LayoutTests:

Test that dumps compositing layers in a document with media controls.

* media/controls-layers.html: Added.
* platform/mac/media/controls-layers-expected.txt: Added.
* platform/mac-mavericks/media/controls-layers-expected.txt: Added.

Canonical link: https://commits.webkit.org/163441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184932 268f45cc-cd09-0410-ab3c-d52691b4dbfc